part-1/exercise-1.07/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dwk-log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dwk-log-output
  template:
    metadata:
      labels:
        app: dwk-log-output
    spec:
      containers:
        - name: dwk-log-output
          image: dwk-log-output:1.7.0
          imagePullPolicy: Never
