part-1/exercise-1.07/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dwk-log-output-svc
spec:
  type: ClusterIP
  selector:
    app: dwk-log-output
  ports:
    - port: 2345 
      protocol: TCP
      targetPort: 7777 # This is the target port
